--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@
   background-color: #1A237E;
   color: #F5F5F5;
 
-  background-image: url("../assets/banner cat.jpg");
+  background-image: url("../src/assets/Beige Aesthetic Fashion Clothing Collection Medium Banner.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
